tests/rosetta/out/Smalltalk/arrays.out
Object: 'len(a) = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:17)
Object: 'a = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:18)
Object: Array new: 5 "<0x7f6680817f20>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds:put: (Object.st:812)
Array(Object)>>at:put: (Object.st:875)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:19)
Object: 'a = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:"Global garbage collection... done"
254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:20)
Object: Array new: 5 "<0x7f6680817f20>" error: Invalid argument 0: must be a SmallInteger
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:774)
Array(Object)>>checkIndexableBounds: (Object.st:794)
Array(Object)>>at: (Object.st:858)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:21)
Object: Array new: 5 "<0x7f6680817f20>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds: (Object.st:796)
Array(Object)>>at: (Object.st:858)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:22)
Object: 's = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:24)
Object: 'len(s) = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:25)
Object: Array new: 5 "<0x7f6680817f20>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds: (Object.st:796)
Array(Object)>>at: (Object.st:858)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:26)
Object: 's = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:27)
Object: Array new: 5 "<0x7f6680817f20>" error: Invalid index 0: index out of range
SystemExceptions.IndexOutOfRange(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.IndexOutOfRange class>>signalOn:withIndex: (SysExcept.st:660)
Array(Object)>>checkIndexableBounds:put: (Object.st:812)
Array(Object)>>at:put: (Object.st:875)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:28)
Object: nil error: Invalid value nil: object not indexable
SystemExceptions.NotIndexable(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.NotIndexable class(SystemExceptions.InvalidValue class)>>signalOn: (SysExcept.st:411)
UndefinedObject(Object)>>checkIndexableBounds:put: (Object.st:807)
UndefinedObject(Object)>>at:put: (Object.st:875)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:29)
Object: 'a = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:30)
Object: 's = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:31)
Object: nil error: did not understand #copyWith:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #copyWith: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:32)
Object: nil error: did not understand #copyWith:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #copyWith: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:33)
Object: nil error: did not understand #copyWith:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #copyWith: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:34)
Object: 's = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:36)
Object: 'len(s) = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:37)
Object: 'a = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:39)
Object: 's = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:40)
Object: 's = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:47)
Object: 'len(s) = ' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arrays.st:48)
